--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-bootstrap4==2.3.1
 flake8==3.8.4
 mccabe==0.6.1
 model-mommy==2.0.0
+psycopg2-binary==2.8.6
 pycodestyle==2.6.0
 pyflakes==2.2.0
 pytz==2021.1
